--- a/WebSample/Views/Shared/_Layout.cshtml
+++ b/WebSample/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - WebConfiguration</title>
+        <title>@ViewData["Title"] - Data Protection</title>
 
         <link rel="stylesheet" href="~/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -12,9 +12,6 @@
         <div class="container body-content">
             @RenderBody()
         </div>
-
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-file-version="true"></script>
 
         @RenderSection("scripts", required: false)
     </body>
